--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 Aug 2003</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span>ADSE (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>0307 7009977</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Karachi, Pakistan</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong> Degree:</strong> <span> BS IN CS (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mehreenfaiz.3@gma.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
