--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">Office automation (MS- word, MS-Excel , PPT)<i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
         </div>
 
       </div>
