--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1><a href="index.html">MEHREEN FAIZ</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>web developer</span></h2>
-     
+      <h2>I'm a passionate <span>web developer</span></h2><Br>
+
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -78,6 +78,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
+                <li><i class="bi bi-chevron-right"></i>  <strong> <a style=" text-decoration: none; color: #ffffff;" class="" href=".\Mehreen's Resume .pdf"><span>Download My CV</span></strong></a></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span>ADSE (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>0307 7009977</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Karachi, Pakistan</span></li>
@@ -88,7 +89,10 @@
                 <li><i class="bi bi-chevron-right"></i> <strong> Degree:</strong> <span> BS IN CS (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mehreenfaiz.3@gma.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+
               </ul>
+              <h2></h2>
+
             </div>
           </div>
           <p>
