--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i>  <strong> <a style=" text-decoration: none; color: #ffffff;" class="" href=".\Mehreen's Resume .pdf"><span>Download My CV</span></strong></a></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span>ADSE (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>0307 7009977</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Karachi, Pakistan</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span>Diploma In Software Engineering(in process)</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -89,6 +89,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong> Degree:</strong> <span> BS IN CS (in process)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mehreenfaiz.3@gma.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                
 
               </ul>
               <h2></h2>
