--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>web developer</span></h2><Br>
-
+ <a style=" text-decoration: none; color: #fffefe;background-color: #000000;border: 1px solid white;padding: 2px 5px;" href=".\Mehreen's Resume .pdf"><span>Download My CV</span></strong></a>
 
       <nav id="navbar" class="navbar">
         <ul>
