--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
             </div>
           <div class="resume-item">
-            <h4>Bachelor in Compute-Science (in process)</h4>
+            <h4>Bachelor in Computer Science (in process)</h4>
             
             <p><em>Karachi University (KU)</em></p>
           </div>
